vlib/v/parser/tests/duplicate_type_b.out
vlib/v/parser/tests/duplicate_type_b.vv:5:8: error: cannot register struct `Foo`, another type with this name exists
    3 | }
    4 |
    5 | struct Foo {}
      |        ~~~
