vlib/v/parser/tests/duplicate_type_b.vv
interface Foo {
	tt()
}

struct Foo {}
